# flayr

./: .gitignore  CMakeLists.txt  Makefile  style.style
crop/: README.md
crop/src/: main.py  split.py
crop/src/static/: index.html  index.js  style.css
latex/: build.py  clean.py  main.py  merge.py
latex/src/: mnist_survey_accompanying_sheet.tex  mnist_survey_sheet.tex  mnist_survey_sheet_filled.tex
src/flayr/: activation_funcs.cpp  activation_funcs.hpp  activation_functions.cpp  flayr.hpp  layer.hpp  layer_simple.hpp  network.cpp  network.hpp  network_simple.cpp  network_simple.hpp
